bookinfo-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bookinfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
  labels:
    app: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - name: primary
    # match:
    # - uri:
    #     exact: /productpage
    # - uri:
    #     prefix: /static
    # - uri:
    #     exact: /login
    # - uri:
    #     exact: /logout
    # - uri:
    #     prefix: /api/v1/products
    # - uri:
    #     prefix: 
    route:
    - destination:
        host: productpage
        port:
          number: 8080
      weight: 100
    - destination:
        host: productpage-canary
        port:
          number: 8080
      weight: 0
